--- a/transaction/src/main/resources/templates/view/mnthAllocation/mnthAllocationView.html
+++ b/transaction/src/main/resources/templates/view/mnthAllocation/mnthAllocationView.html
@@ -33,7 +33,7 @@
 	<div class="container01">	
 		<div class="div_title01">조회영역</div>  
 		<div class="div_body01">
-			<table class="table table-bordered container" th:if="${!#lists.isEmpty(mSelect)}" >
+			<table class="type09 table-bordered container" th:if="${!#lists.isEmpty(mSelect)}" >
 			  <thead class="text-center">
 			    <tr >        
 			    <!--년도--><th >년도</th>
