--- a/transaction/src/main/resources/static/CSS/com/com.css
+++ b/transaction/src/main/resources/static/CSS/com/com.css
@@ -61,8 +61,12 @@ table {
     width: 100%;
     border-collapse: collapse;
 }
+thead, tbody{
+    border-right: hidden;
+    border-left: hidden;
+}
 th, td {
-    border: 1px solid black;
+    border: 0.5px solid rgb(137, 137, 137);
     padding: 6px;
     text-align: center;
 }
@@ -137,7 +141,7 @@ th {
 
 .calendar_body{
     margin: 10px;
-    width: 60%;
+    width: 63%;
     height: 40%;
 }
 
@@ -178,8 +182,6 @@ th {
 .update-button:hover {
     background-color: #45a049; /* 수정 버튼 호버 시 색상 변화 */
 }
-
-
 
 .delete-button {
     background-color: #FF9C73; /* 삭제 버튼 배경색 */
@@ -226,7 +228,84 @@ th {
     background-color: #72BF78; /* 호버 시 배경색 변화 */
 }
 
+.close-button {
+    background-color: rgb(255, 128, 128); /* 버튼 배경색 */
+    color: white; /* 글자 색 */
+    border: none; /* 테두리 제거 */
+    padding: 5px 10px; /* 내부 여백 */
+    cursor: pointer; /* 포인터 효과 */
+    border-radius: 5px; /* 둥근 모서리 */
+    font-size: 16px; /* 글자 크기 */
+    transition: background-color 0.3s; /* 배경색 변화 효과 */
+}
+
+.close-button:hover {
+    background-color: rgb(255, 128, 128); /* 호버 시 배경색 변화 */
+}
+
+
+.btn-button {
+    background-color:#FF1C8A; /* 버튼 배경색 */
+    color: rgb(255, 0, 255); /* 글자 색 */
+    width: 100%;
+    border: none; /* 테두리 제거 */
+    padding: 5px 10px; /* 내부 여백 */
+    cursor: pointer; /* 포인터 효과 */
+    border-radius: 5px; /* 둥근 모서리 */
+    font-size: 16px; /* 글자 크기 */
+    transition: background-color 0.3s; /* 배경색 변화 효과 */
+}
+
+.btn-button:hover {
+    background-color: #FF1C8A; /* 호버 시 배경색 변화 */
+}
+
 /*********** 버튼 *********************/
+
+/*********** 가로 크기 *********************/
+.w300{
+    width: 300px;
+}
+.w250{
+    width: 250px;
+}
+.w200{
+    width: 200px;
+}
+.w150{
+    width: 150px;
+}
+.w100{
+    width: 100px;
+}
+.w90{
+    width: 90px;
+}
+.w80{
+    width: 80px;
+}
+.w70{
+    width: 70px;
+}
+.w60{
+    width: 60px;
+}
+.w50{
+    width: 50px;
+}
+.w40{
+    width: 40px;
+}
+.w30{
+    width: 30px;
+}
+.w20{
+    width: 20px;
+}
+.w10{
+    width: 10px;
+}
+/*********** 가로 크기 *********************/
 
 
 /*********** 버튼 이벤트 *********************/
@@ -285,3 +364,24 @@ th {
   text-decoration: none;
 }
 /*********** 달력 주말 색상*********************/
+
+
+/*********** 새로 스크롤 생성 *********************/
+.overflow_y {
+    overflow:scroll; 
+    height:510px;
+}
+
+.userListTable th {
+    background-color: #f2f2f2;
+    border: 0.5px solid rgb(137, 137, 137);
+    position: sticky;
+    top: 0px;
+}
+/*********** 새로 스크롤 생성 *********************/
+
+/*********************************************/
+.bg-warning {
+    background-color: azure;
+}
+/*********************************************/
