--- a/transaction/src/main/resources/static/CSS/com/com.css
+++ b/transaction/src/main/resources/static/CSS/com/com.css
@@ -103,6 +103,25 @@ th {
   border-radius: 4px; /* Optional: Adds a slight border radius */
 }
 
+.full-width-input05 {
+  width: 50%; /* Makes the input fill the width of the table cell */
+  box-sizing: border-box; /* Ensures the input width includes padding and borders */
+  padding: 8px; /* Optional: Add some padding inside the input */
+  margin: 0; /* Removes margin */
+  border: 1px solid #ccc; /* Adds a border to the input */
+  border-radius: 4px; /* Optional: Adds a slight border radius */
+}
+
+.full-width-input10 {
+  width: 100%; /* Makes the input fill the width of the table cell */
+  box-sizing: border-box; /* Ensures the input width includes padding and borders */
+  padding: 8px; /* Optional: Add some padding inside the input */
+  margin: 0; /* Removes margin */
+  border: 1px solid #ccc; /* Adds a border to the input */
+  border-radius: 4px; /* Optional: Adds a slight border radius */
+}
+
+
 .full-width-input01_data {
     /* Add your styles here */
     color: #333;
@@ -110,6 +129,14 @@ th {
     padding: 10px;
     border-radius: 5px;
 }
+.full-width-input02_data {
+    /* Add your styles here */
+    color: #333;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 5px;
+}
+
 .full-width-input09_data {
     /* Add your styles here */
     width: 96%;
@@ -246,7 +273,7 @@ th {
 
 .btn-button {
     background-color:#FF1C8A; /* 버튼 배경색 */
-    color: rgb(255, 0, 255); /* 글자 색 */
+    color: rgb(255, 255, 255); /* 글자 색 */
     width: 100%;
     border: none; /* 테두리 제거 */
     padding: 5px 10px; /* 내부 여백 */
@@ -304,6 +331,43 @@ th {
 }
 .w10{
     width: 10px;
+}
+
+.w50_{
+    width: 50%;;
+}
+
+
+.w90_{
+    width: 90%;;
+}
+
+.w100_{
+    width: 100%;;
+}
+
+.minW100{
+    min-width : 100px;
+}
+
+.minW90{
+    min-width : 90px;
+}
+
+.minW80{
+    min-width : 80px;
+}
+
+.minW70{
+    min-width : 70px;
+}
+
+.minW60{
+    min-width : 60px;
+}
+
+.minW50{
+    min-width : 50px;
 }
 /*********** 가로 크기 *********************/
 
