--- a/transaction/src/main/resources/static/CSS/com/com.css
+++ b/transaction/src/main/resources/static/CSS/com/com.css
@@ -73,6 +73,12 @@ th, td {
 th {
     background-color: #f2f2f2;
 }
+
+.tdHdng{
+    border: 0.5px solid rgb(137, 137, 137);
+    padding: 6px;
+    text-align: center;
+}
 /*********** 테이블 *********************/
 
 /*********** 입력칸 *********************/
@@ -342,6 +348,9 @@ th {
     width: 90%;;
 }
 
+.w95_{
+    width: 95%;;
+}
 .w100_{
     width: 100%;;
 }
@@ -370,6 +379,49 @@ th {
     min-width : 50px;
 }
 /*********** 가로 크기 *********************/
+
+/*********** 세로 크기 *********************/
+.h800{
+    height: 800px;
+}
+.h500{
+    height: 500px;
+}
+.h100{
+    height: 100px;
+}
+.h90{
+    height: 90px;
+}
+.h80{
+    height: 80px;
+}
+.h70{
+    height: 70px;
+}
+.h60{
+    height: 60px;
+}
+.h50{
+    height: 50px;
+}
+.h40{
+    height: 40px;
+}
+.h30{
+    height: 30px;
+}
+.h20{
+    height: 20px;
+}
+.h10{
+    height: 10px;
+}
+
+.h50_{
+    height: 50%;
+}
+/*********** 세로 크기 *********************/
 
 
 /*********** 버튼 이벤트 *********************/
@@ -449,3 +501,13 @@ th {
     background-color: azure;
 }
 /*********************************************/
+
+/*********** 숨기기/표시 *********************/
+.none01 {
+    display: none;
+}
+.block01 {
+    display: block;
+}
+/*********************************************/
+
