--- a/transaction/src/main/resources/templates/view/alctnClnd/alctnClndView.html
+++ b/transaction/src/main/resources/templates/view/alctnClnd/alctnClndView.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         
-        <div  style="float: left; width : 33%;">
+        <div  style="float: left; width : 33%; overflow-y: scroll;" class="h800" >
             <table class="table table-bordered " >
                 <colgroup>
                     <col style="width: 8%;">
