--- a/transaction/src/main/resources/static/CSS/com/modal.css
+++ b/transaction/src/main/resources/static/CSS/com/modal.css
@@ -118,6 +118,21 @@
     -moz-box-shadow: 2px 5px 10px 0px rgba(0, 0, 0, 0.35);
 }
 
+.popup_box01 {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    overflow: auto;
+    height: 500px;  
+    width: 680px;
+    transform: translate(-50%, -50%);
+    z-index: 1002;
+    box-sizing: border-box;
+    background: #fff;
+    box-shadow: 2px 5px 10px 0px rgba(0, 0, 0, 0.35);
+    -webkit-box-shadow: 2px 5px 10px 0px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 2px 5px 10px 0px rgba(0, 0, 0, 0.35);
+}
 
 /*오버레이 뒷배경*/
 .popup_overlay {
@@ -130,23 +145,42 @@
     background: rgba(0, 0, 0, 0.5);
 }
 
+.popup_btn{
+    margin: 10px;
+    height: 30px;
+}
 /*popup*/
 
-    /* Header Fixed at Top */
-    .header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 50px;
-      background: rgb(219, 219, 219);
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 1000;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    }
+/* Header Fixed at Top */
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background: rgb(219, 219, 219);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+/* Header Fixed at Top */
+.header01 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
 
      /* Footer Fixed at Bottom */
     .footer {
