--- a/transaction/src/main/resources/templates/view/layout/menuBar.html
+++ b/transaction/src/main/resources/templates/view/layout/menuBar.html
@@ -49,7 +49,8 @@
 	  <li class="li_01"><a href="/allocation/allocationView">            배당내역   </a></li>
 	  <li class="li_01"><a href="/weeklyAllocation/weeklyAllocationView">주간배당내역</a></li>
 	  <li class="li_01"><a href="/mnthAllocation/mnthAllocationView">    월간배당내역</a></li>
-	  <li class="li_01"><a href="/alctnClnd/alctnClndView">              배당달력</a></li>
+	  <li class="li_01"><a href="/alctnClnd/alctnClndView">              배당달력   </a></li>
+	  <li class="li_01"><a href="/alctnClnd/stckClndView">               주식달력   </a></li>
     </ul>
 </body>
 </html>
